--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Aniwave MAL Export fixer for Anilist</h1>
 		<hr>
 		
-		<h5>The eported MAL XML file from Aniwave is by default not compatible with Anilist, this site fixes it so you can import it on Anilist</h5>
+		<h5>The exported MAL XML file from Aniwave is by default not compatible with Anilist, this site fixes it so you can import it on Anilist</h5>
 
         <div class="mb-3">
             <label for="aniwaveExportInput" class="form-label">Please select the Exported Aniwave XML file that you can get from <a href="https://aniwave.to/user/list/export" target="_blank">here</a></label>
